welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var p : Int = 6;
	var T = new Array [Color](6)
	for (i <- 0 to 5) {
		T(i) = getCouleurSol();avance();
		}
		avance();gauche();avance();droite();
    	baisseBrosse();
    	setCouleurBrosse(T(i));
    	avance();
    	avance();
}
